@@ -4,11 +4,11 @@ DESCRIPTION=A network protocol analyzer formerly known as ethereal
 EAPI=5
 HOMEPAGE=http://www.wireshark.org/
 IUSE=adns +caps crypt doc doc-pdf geoip gtk2 +gtk3 ipv6 kerberos libadns lua +netlink +pcap portaudio qt4 selinux smi ssl zlib +filecaps
-KEYWORDS=~alpha amd64 ~arm hppa ~ia64 ~ppc ~ppc64 ~sparc x86 ~x86-fbsd
+KEYWORDS=alpha amd64 ~arm hppa ~ia64 ~ppc ~ppc64 ~sparc x86 ~x86-fbsd
 LICENSE=GPL-2
 RDEPEND=>=dev-libs/glib-2.14:2 netlink? ( dev-libs/libnl ) adns? ( !libadns? ( >=net-dns/c-ares-1.5 ) ) crypt? ( dev-libs/libgcrypt:0= ) caps? ( sys-libs/libcap ) geoip? ( dev-libs/geoip ) gtk2? ( x11-libs/gdk-pixbuf x11-libs/pango x11-misc/xdg-utils >=x11-libs/gtk+-2.4.0:2 ) gtk3? ( x11-libs/gdk-pixbuf x11-libs/pango x11-misc/xdg-utils x11-libs/gtk+:3 ) kerberos? ( virtual/krb5 ) libadns? ( net-libs/adns ) lua? ( >=dev-lang/lua-5.1 ) pcap? ( net-libs/libpcap[-netlink] ) portaudio? ( media-libs/portaudio ) qt4? ( dev-qt/qtcore:4 dev-qt/qtgui:4 x11-misc/xdg-utils ) selinux? ( sec-policy/selinux-wireshark ) smi? ( net-libs/libsmi ) ssl? ( net-libs/gnutls ) zlib? ( sys-libs/zlib !=sys-libs/zlib-1.2.4 )
 REQUIRED_USE=?? ( gtk2 gtk3 qt4 ) ssl? ( crypt )
 SLOT=0/1.10.8
 SRC_URI=http://www.wireshark.org/download/src/all-versions/wireshark-1.10.8.tar.bz2
 _eclasses_=autotools	5256b4f4c1798109f39f308f9f7eaf5f	eutils	025442f2eecab39ad0b4e541b6e142af	fcaps	832d0c7d930e7df835c19b5d0a5f6f4b	libtool	2964b38e7ad7f6998406386ad1c6dbcf	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=e3d331e29fcc4ce43bf8e5d368ab95da
+_md5_=75e9f99d77f0b639a632d9ec0dca852a
