@@ -4,11 +4,11 @@ DESCRIPTION=A network protocol analyzer formerly known as ethereal
 EAPI=5
 HOMEPAGE=http://www.wireshark.org/
 IUSE=adns +caps crypt doc doc-pdf geoip gtk ipv6 kerberos libadns lua +pcap portaudio python selinux smi ssl zlib +filecaps python_targets_python2_6 python_targets_python2_7 python_single_target_python2_6 python_single_target_python2_7
-KEYWORDS=~alpha amd64 ~arm hppa ~ia64 ~ppc ~ppc64 ~sparc x86 ~x86-fbsd
+KEYWORDS=alpha amd64 ~arm hppa ~ia64 ~ppc ~ppc64 ~sparc x86 ~x86-fbsd
 LICENSE=GPL-2
 RDEPEND=>=dev-libs/glib-2.14:2 adns? ( !libadns? ( >=net-dns/c-ares-1.5 ) ) caps? ( sys-libs/libcap ) crypt? ( dev-libs/libgcrypt:0= ) geoip? ( dev-libs/geoip ) gtk? ( >=x11-libs/gtk+-2.4.0:2 dev-libs/atk x11-libs/pango x11-misc/xdg-utils ) kerberos? ( virtual/krb5 ) libadns? ( net-libs/adns ) lua? ( <dev-lang/lua-5.2 ) pcap? ( net-libs/libpcap ) portaudio? ( media-libs/portaudio ) python? ( python_single_target_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6 ) python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_single_target_python2_6(+)?,python_single_target_python2_7(+)?] ) selinux? ( sec-policy/selinux-wireshark ) smi? ( net-libs/libsmi ) ssl? ( net-libs/gnutls ) zlib? ( sys-libs/zlib !=sys-libs/zlib-1.2.4 )
 REQUIRED_USE=ssl? ( crypt )
 SLOT=0/1.8.15
 SRC_URI=http://www.wireshark.org/download/src/all-versions/wireshark-1.8.15.tar.bz2
 _eclasses_=autotools	5256b4f4c1798109f39f308f9f7eaf5f	eutils	025442f2eecab39ad0b4e541b6e142af	fcaps	832d0c7d930e7df835c19b5d0a5f6f4b	flag-o-matic	32bd61b45c2f57e468b4ee7311fec8f5	libtool	2964b38e7ad7f6998406386ad1c6dbcf	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	python-single-r1	a71a169a881e0a11d04a7fe12dc39f6e	python-utils-r1	8ba35e0dacf49c6cae65901d183c971f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=18beb5cd656948179ac0d3bc68d625aa
+_md5_=0dc0a4e3da85419dd7d036551624da04
