@@ -13,16 +13,16 @@ DIST wireshark-1.12.0-rc2.tar.bz2 28977769 SHA256 31009bb450126e9b12808267419f31
 DIST wireshark-1.8.13.tar.bz2 24150627 SHA256 0d672e549fa0b30bbde6f68e8f80ccae88017f2320e17df5ffd2507ecc9d6572 SHA512 b6b302a2f00c5ddf2e5ffbadbe2178959ed5b8a7843d8df176f96920a7095e847b513590d90543b4698264ee33c7504663f558a5cba18467301d8bd94a0673cc WHIRLPOOL 668e00974bb4ecb012ee833fc2c49361b464c5c593fbc2957252a95cec9e06efd13c211c76f58b56fdd3d4c99a95c9ca59f447892436eef2a32868f8e312be94
 DIST wireshark-1.8.15.tar.bz2 24193769 SHA256 e71fab6909a67e6b1d5d21f93e731488fb0343e5206799105e5fdc34923d3e76 SHA512 38306d568017bf12f7db15507e209a74bdd600d4ae02fba63cc5f3639bcba5d07e5ef3dd50fcda3415d30647debdf3a63149a0ef8243898a789e14a8b456a667 WHIRLPOOL 121dc025ef198a6b60a710af370b97834c6b73feea8b314a320b94e47e14c199c76e247868b9be40852b26d8a9d726d3e0d5c85b671e3e71944f8f65f4916a9c
 EBUILD wireshark-1.10.7.ebuild 5817 SHA256 2992523100d08e70150cf5c524e5e8a5803eb39fdbad98966007fc5db4508dfb SHA512 65e91fba21e1cd487ccfc97081b0a2cfd15e205270e62b58626801284fd42cb20ad3b2c7e064951877fabb0c433679fef4ee032d3a8581bcf91b417933612bdd WHIRLPOOL 12b5fbc9fdf13fb1c807aef04850bb9913c6205bb26d239f7a2058c190eb93ed59c20dc375f5478d04ea3142fcc9dde335b5f82466781afaf753dc257f4d5880
-EBUILD wireshark-1.10.8.ebuild 5821 SHA256 a096fe54dc64609c1be47d1f411ec47ac964d8894423e565a04f0b190e89ae15 SHA512 3825d797f1a4806857f62c698ba69e3178bb4dec043d2caaddb136f81d870b354205bbac7c94b309d750328e96af736d59239da895ee2a2b5656153aabf5d2c3 WHIRLPOOL 38adea6611905442866470ff5b1f697a28391b2f695286c1483a59279717b86a19efd99dabc459379dc24de7393b4498c85e44c9039e7b80aa006579779443d0
+EBUILD wireshark-1.10.8.ebuild 5825 SHA256 aa3deef98b2d836d9a258b8fdf96ef3ec8a5206808491510cf198e7e3789030f SHA512 405115f4667d75e9c3f5f4d704be8cba392fa0425d527848ac5c08b4598aa400980ef5a9f43f3aa8e85f76273f5b82ec364643f8ee8fce7446f4023662447a6a WHIRLPOOL 43bfe9fcf0a5c6ed2ae52bda987053154e3b7102d2d6e141e4d17e67cfd37661b7f08747fc56ae9521a466afe7dc805c15f97d4cf275b07e9d2bc9524d556d8e
 EBUILD wireshark-1.12.0_rc2.ebuild 5595 SHA256 7610c3868c6de12bfe8aae162dba2ea8a7dfbb05494b6217245aff522beec472 SHA512 76fa2f53751d4d042028ab8370c71a38744926876785d88e98dbf82aab4187eeabc119e359b23c88f7e9878a5ffabd29148b4e10a0b7ba91be7efd7b90ec7ca1 WHIRLPOOL 88ba886f5dc1c8874270f0ddb300ac36cacacf64bed998b90078e7b1ce7aea740f0b3a457223a06dbd1419da32403c5c422c4e724800f29db64b4a21a1c58b9a
 EBUILD wireshark-1.8.13.ebuild 5630 SHA256 63e31f4b1c0fd3e5c57fc025a834e8d70c6f9d846d161286eace0fa713a94b5d SHA512 2fde35910f12774058b1a2d79bf0a90ca8a1752616372242ae67c94bae71fc9708845f0dfbea90d6e3573075c72f125ec6790e5793ae9b365acf24b5c1b3d9f3 WHIRLPOOL afb5dc1d31aa94ce75f690c8ed8a6d3ca5597a4577b841f13fd5de597d7e6ef99caaa759e0ff0ee49f996d315c2a4a2f3276f7b14c43640e8ef0d3b66dad7e2c
-EBUILD wireshark-1.8.15.ebuild 5987 SHA256 42cdc9bb511e0dec6644426303d295d5ff3b23e886edf6c45f4dbd90aa640bbb SHA512 1401b3bbf941205013ac8c90893392b4d9c7f74d477ed76f591fd17e5409a8d2609978385c63dd5adc06866ece139fc50f4cf41c8c764a6e16cc11165118d9d4 WHIRLPOOL f205a908f2e7ab2d79b9d7bd824595e5b1d430a4ef6eb4158b640c663233d98ed18fb22d30177652e1be9b0748811d261f9b4bf52893e43b04067d4b36daf013
-MISC ChangeLog 91178 SHA256 f8a785cbe446475fdedd3cde73e04c8efd35116dc9b3f02e1e0c336a7be32421 SHA512 cda33988d2ef313639ef0e33b949a9bdc65230dca046ea4bf221929ce92441a15baa88d6da103418fe6dd010ab8e534b10897bc3f7156ad97e771133c3c31168 WHIRLPOOL 4aff39188dd1b50400bd6a2b7d2992a7f2efffc1b571ae5126a637dcd949962de85af9b5eef7e8b461a99194478515584f97d137a2accf62deb2b47920c21713
+EBUILD wireshark-1.8.15.ebuild 5991 SHA256 ed41a2fe8760e5a9ff757a4bd521e437b152e59e3bb78fd8b07a37e66996d27e SHA512 cb22db48b021dd0ae21f0137a82fd6b7014677e1d75e208d0524607cebfa78421426697d8e914c5c9f10bfdec3088666c02363ac71b274dc9f26d5e72ad9d98c WHIRLPOOL e71bf430befd8452e8d8d1f7417844b4821f6d17ba98c1db831dbc57a99eea6da544f5ddc8809d11a1192188dbcf80a55e0aeade088c03104ac450d8b01d85f5
+MISC ChangeLog 91405 SHA256 8458a60034069f9288e99d442b50623d36a6e6ac88633e9edf2b68adcc3b2565 SHA512 6d614de51c0410fc72a890d3a419ba915726cfc091b9a448a4b9814b045f4d62bb4d996a761be1f9a403863380f6d442704e75248988110b798026d6c73543e8 WHIRLPOOL d30d0ca661172239e9266084222b380ddb93e74415ff50c7f61491d5c78738abf38384d00299b27abec7cd3cd9552ee325ae99a4152cf08eed950b2801d2d2f2
 MISC metadata.xml 2662 SHA256 aa3e958ce2704697a912374dfd9df72310353b54883e63de57b1f4e925f804eb SHA512 2eaf02dbd17d346b42dd2ecbb10318c08f8cba0e6bf0cd0dd76f145cc37c1eb35788c4a60d90c42b92c8b7e554315a40046b3b94c5d1a004ebb88650eb296dda WHIRLPOOL 21d6545372ed8aae96efb37f295904a3b14a721e754daf3bab74284d2e7527944fa6c75dc34c3229dea0c815641574f46f72b4b173d0653c6a92bf06341b81a5
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlObmqgACgkQVWmRsqeSphNs2wCeMs6Jburs+ejl8xl7y77rDJFP
-3eoAn23c3gcYNz22Q39K0eBdhv0WUcKd
-=CPC/
+iEYEAREIAAYFAlOgTVkACgkQA+4Doc5dVOg1bQCfTTqH4CZLH4QAqBlayzojn/e1
+i4YAoIuc7wgEOHKY2d4m+/UXKeQgnj+w
+=8uHd
 -----END PGP SIGNATURE-----
