@@ -2,23 +2,24 @@
 Hash: SHA256
 
 DIST 87921-dekorator-0.5.1.tar.bz2 139325 SHA256 196a8325fc9b0ece12dd422604236534ee8c395509f89c0468878044a1cd50f1 SHA512 b32ed121636fa72d1f36433a88bd9abcc383c2c4454a1671f8357df52bd21fc3057af5fff864fbe2767336943ded1773d17c115cb08155879ac625c1a2d2890a WHIRLPOOL 745c2ba496c24acdfe12e762e6d9bcadfeb64c8f9d7a5e969aa6b9b51c77793cc5b2a6bdcae55cfff7ff4998386147b0ec5f65b6df6a33a06af3b4c609bcac34
-EBUILD dekorator-0.5.1-r1.ebuild 625 SHA256 3eedefbcadc579d69d870cc2c29e76bccb2ab98fe96c3087f2389a7b5cac342c SHA512 4d2016ae93f76b5f5bcc2c836fbc2f6779ba69807436aff046a33125f48d5d811384c419defb1107ff1e6a6a2b84918108e057d9e465ad95312defa1a543d839 WHIRLPOOL caaaa619cb7f28dc41996ab8580261e8d7d539eaa9df4ba30ef04ce48164d7e6ac3d5221a01a749ead9d9f177a8e3fb70811b455ae7cbc9a634ea23404a761e5
-MISC ChangeLog 1162 SHA256 e0a3501cac53c53217203ee7d18c4f472328c000a79cc2109ed48b7fa8d6e03a SHA512 39231ea1266f1b258b03095f0f98f428f328e3bb7e568c9af42814c24e2a0f0f2d6cccf9570fd3c33c132797ccc00b66553ff59e1b2a7151acb7a011ba79669c WHIRLPOOL 4e9ab76c29a63524337c7a2218c0013164b27027a841bd97dfcb09a06b5419c6fd4701de4f0406c52a41aff84096691b960bb2a6ba4d4914ac1fc38fecfb9769
-MISC metadata.xml 156 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a SHA512 0dcd7cfb246c4518ed1653cb06f5d2c7220ea90160a4b1a1da43edf5124b76d7104fe35a545178b6b3df19f5f3a3eb3f31ac1b4d169e3ca90d78be3e20e58b05 WHIRLPOOL df162e3d521df7decdd84d980e4bc71531bb8e05486c07102c554b529c10a1fb3374dda79d56b13bc037a2d230b4b8ff25702c7a1b86d703a24e8bfe7fe57642
+EBUILD dekorator-0.5.1-r1.ebuild 675 SHA256 74d2fe1de6f138f996120570bf1efb9690bff5e388c4e797bbfcef73997d0f11 SHA512 11106ddc69fb9ba3b711c7e12829151e230b04a5fb63af0617dec0b2e1b681613107173c1401835c236142f2972094ddbe8c14df16c67222a979ecdf5f0cc6c1 WHIRLPOOL 14b7e52a038980a264c3d9a31e3e52800d8b136306d3f2c7c3730721a24f6152c7b19e754a7ab891da0d18c2102fadfb0c36cced9d0e8c1aa87d92f2c4da440a
+MISC ChangeLog 1298 SHA256 9d12f8801d004024fc0e550ed84f0db6e41c7904c1799c42d391aa395907329e SHA512 65df12e0868ee6be371cb6f6e26626da392e520167e2a529c6d6cdeda1b1166d154f08d219b9f0ce4db6989d1ccf2f3bedb1121f08d225f071b0c39e0f38c4b2 WHIRLPOOL 218b7ee918a869f661612790c9ab028ac818cbd114744435e2e2366934e9e2dfe11a5859b70bf4bdde7a493e86bb028f18c316a885fd10fb30c541702d38e3d5
+MISC metadata.xml 157 SHA256 01f6fa4357ce08e8b0f7900a51fa78c7f060fefc7c7da98acaec1e283dd59892 SHA512 657d6b0a31ceb7ac10bedfd5cbd634d4ff47938bd2f321203f0233e53686f7e0fd460e81f82793804895c7e97cfa472c1ca44b93314574262ee8cc5745a3efd0 WHIRLPOOL 785331909f1834cdd5d797ad484ea0e35c3e44c79a8a7517a6fb5de926acd181abd57910c8d960fb2e11ea38ddea336bca309af16fcc2df68fe4b602bca120b3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJTXtVhAAoJEGVpnaTzz9K9NncP/0cPguAsDbWYQIDysGgs07Gh
-H4mK96oftKuyE07cDdIEPG5PcyFBOdPlmCnY8xCxa3EGC2ZjGdeOdO3Xh5tjPoHL
-i58na8gpVVbN1fx9OewbHOGCK79NGP5bsW0gVZHAMwk4jY27ZL+giBZudZTlD0lG
-i4oS6jTuwVHd2jxM8U81RzbKmVITfNwK2xDLapP0b6m9qvipswGQAAn2tXhh/OO8
-ahjbwPRivIMlMwrRYfSv/WF/C4pvChG9tEGoLsi170NHf1oR08Ojs7dnCo0mcDAI
-zCvPxvtb54xQoKwOVfe+PyxWrhWnMdsqkfpk6UkUYQbuibTq44W7Wy/72PsZHIDr
-Z/u2QMnypfJARkk85sooSebiGV5kuRWXQwe5zo3SZ5h2JZSSrJnX/iK/AHYyUP1P
-3Vgozg6XizZQxYOtdT0kIYSuwomMilmJSPGCkJlV/WuHzS1CVhX5HbxQcf7lk5Et
-SXrYCt6YO3PzHH5onRVOI2lHldcxHRVnAv1g//6AEEUZhzavXEB23FaoE9iLMHrS
-NTpVJiqNfPKgBxwCq2fTAxBHZJumV6nk3Otji8Nc65vQ+Q6ODMjZu8w4K/37xDcT
-nXeTZCIpA22maGJzBayRkP1EQhA552JbEVJe+/jsduxMMQkdJOeMIMDSiGe3Ca9g
-7N7l3RAc9Zk3d2xmcWNr
-=82nB
+iQJiBAEBCABMBQJToE4YRRSAAAAAABQAKGlzc3Vlci1mcHJAbm90YXRpb25zOTc5
+MTY5NkQ3RDM3NkRBN0U5QjZGMTUwMDZCMUYzOERDQTQ1QTFFQwAKCRAGsfONykWh
+7NGREACGATYMKcsiBJnM+AdV5fQ/dmMHqspa4o7GEREfzOXt2tLRj70cSLqUBYMA
+xJXxWdEf74X5EnRvScc9n5+OfB8+sdv3Lu5TcWBpzNzvYWO+3oy3rH+4tb9w5dOW
+QYjGta+P24OdJHjV5IhuF9deHNiODHp+x9ByzkQx3OHbDRcWBolRVCVhUzqFmAhN
+l9twCDlK8n68EVRG5TVvw8IdDScMueAcRE4/pkUBWigpSXbS5F7Z2GZy1n8YcqVy
+QceQ/n103Y6rLzkRrmZCnjba1KVgQCXLgSLqu9y3ufcHy66Z7hDwd1AxeHLiXsGZ
+IhMYQck9R/BKwM3JEPkdLrfNCSaDBltLkKCiC6CE9/idVufPARlcq8QrlDs/R6lJ
+hOoTaawKhkqTGLTfYW/JQJq0wSPN+VNdxtywanHfJ4T3u9b6tGvSJR1z53vPmllW
+9FiwNgDvfuHWYCQwLpT5KWx08WiAisKmZnJMqIDRtQwjaPNJorSRllscPTvDXY4a
+kXBnW2X/Q0E2uMCIqnAonTFDC1Ch0oSfi1IaBqIl7rnRcVAkMXyuAGyvIkyDR0/C
+pvqdwfX2UVQnUlQUCDpOh63yxDw1vVtu+oB65fRNElKdElXN/VRJoiaMz02WL+mY
+TKzV7bMAUXEq7FK0j2Oe5b28qJ2hd6dYXjwRaEUVblt8WX4rUw==
+=WIdw
 -----END PGP SIGNATURE-----
