@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/dekorator/dekorator-0.5.1-r1.ebuild,v 1.2 2014/04/28 22:25:36 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/dekorator/dekorator-0.5.1-r1.ebuild,v 1.3 2014/06/17 14:16:43 kensington Exp $
 
 EAPI=5
 
@@ -17,6 +17,8 @@ IUSE="debug"
 
 DEPEND="
 	$(add_kdebase_dep kwin)
+	media-libs/qimageblitz
 "
+RDEPEND="${DEPEND}"
 
 DOCS=( AUTHORS ChangeLog CHANGELOG.original README README.original TODO )
