@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/dekorator
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/dekorator/ChangeLog,v 1.8 2014/04/28 22:25:36 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/dekorator/ChangeLog,v 1.9 2014/06/17 14:16:43 kensington Exp $
+
+  17 Jun 2014; Michael Palimaka <kensington@gentoo.org>
+  dekorator-0.5.1-r1.ebuild:
+  Add missing dependencies wrt bug #513584.
 
   28 Apr 2014; Johannes Huber <johu@gentoo.org> -dekorator-0.5.1.ebuild,
   dekorator-0.5.1-r1.ebuild:
