@@ -1,6 +1,12 @@
 # ChangeLog for net-analyzer/wireshark
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/wireshark/ChangeLog,v 1.623 2014/06/14 00:43:19 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/wireshark/ChangeLog,v 1.625 2014/06/17 14:14:48 klausman Exp $
+
+  17 Jun 2014; Tobias Klausmann <klausman@gentoo.org> wireshark-1.8.15.ebuild:
+  Stable on alpha, bug #513094
+
+  17 Jun 2014; Tobias Klausmann <klausman@gentoo.org> wireshark-1.10.8.ebuild:
+  Stable on alpha, bug #513094
 
 *wireshark-1.12.0_rc2 (14 Jun 2014)
 
